as best as i can

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ body {
   font-family: jamsil, 'hanyang', sans-serif;
   box-sizing: border-box;
   user-select: none;
+  -webkit-user-drag: none;
 }
 
 /* @media only screen and (max-width: 768px) {
