--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 
 #root {
   width: 100vw;
-  height: 100lvh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
